--- a/src/app/components/TransitionProvider.tsx/transitionProvider.module.scss
+++ b/src/app/components/TransitionProvider.tsx/transitionProvider.module.scss
@@ -2,9 +2,9 @@
 	width: 100%;
 	background: radial-gradient(
 		89.76% 53.41% at 76.46% 53.61%,
-		rgb(182, 226, 251) 0%,
-		rgb(168, 195, 250) 44.49999928474426%,
-		rgb(151, 156, 248) 100%
+		#2980b9 0%,
+		#6dd5fa 44.49999928474426%,
+		rgb(255, 255, 255) 100%
 	);
 }
 .providerTop {
