--- a/src/app/components/TransitionProvider.tsx/transitionProvider.module.scss
+++ b/src/app/components/TransitionProvider.tsx/transitionProvider.module.scss
@@ -6,7 +6,9 @@
 		#6dd5fa 44.49999928474426%,
 		rgb(255, 255, 255) 100%
 	);
+	z-index: 100;
 }
+
 .providerTop {
 	position: fixed;
 	width: 100vw;
