--- a/src/app/components/Navbar/navbar.module.scss
+++ b/src/app/components/Navbar/navbar.module.scss
@@ -59,9 +59,6 @@
 	line-height: 1.75rem;
 	font-weight: 600;
 }
-.logo {
-	text: #ffffff;
-}
 
 .menuWrapper {
 	@media (min-width: 768px) {
@@ -79,26 +76,7 @@
 	height: 2rem;
 	background-color: transparent;
 }
-.topLine {
-	border-radius: 0.25rem;
-	width: 2.5rem;
-	height: 0.25rem;
-	background-color: #000000;
-	transform-origin: left;
-}
-.midLine {
-	border-radius: 0.25rem;
-	width: 2.5rem;
-	height: 0.25rem;
-	background-color: #000000;
-}
-.bottomLine {
-	border-radius: 0.25rem;
-	width: 2.5rem;
-	height: 0.25rem;
-	background-color: #000000;
-	transform-origin: left;
-}
+
 .menuList {
 	display: flex;
 	position: absolute;
@@ -115,4 +93,5 @@
 	line-height: 2.5rem;
 	color: #ffffff;
 	background-color: #000000;
+	font-family: var(--font-rubik-mono);
 }
