--- a/src/app/components/Navlink/navlink.module.scss
+++ b/src/app/components/Navlink/navlink.module.scss
@@ -7,6 +7,7 @@
 	display: flex;
 	align-items: center;
 	white-space: nowrap;
+	font-family: var(--font-rubik-mono);
 }
 .navlinkAction {
 	font-weight: 600;
