added scroll lock

--- a/src/app/components/Navbar/navbar.module.scss
+++ b/src/app/components/Navbar/navbar.module.scss
@@ -76,7 +76,9 @@
 	height: 2rem;
 	background-color: transparent;
 }
-
+.no-scroll {
+	overflow: hidden !important;
+}
 .menuList {
 	display: flex;
 	position: absolute;
