--- a/src/app/components/Navbar/navbar.module.scss
+++ b/src/app/components/Navbar/navbar.module.scss
@@ -33,7 +33,7 @@
 	display: none;
 	padding: 0.25rem;
 
-	@media (min-width: 768px) {
+	@media (min-width: 1024px) {
 		display: flex;
 		gap: 16px;
 		justify-content: center;
@@ -41,6 +41,7 @@
 		border: 1px solid #add7ff;
 		border-radius: 20px;
 		width: 100%;
+
 		max-width: 615px;
 		align-items: center;
 		justify-content: center;
@@ -50,7 +51,7 @@
 }
 
 .menuWrapper {
-	@media (min-width: 768px) {
+	@media (min-width: 1024px) {
 		display: none;
 	}
 }
@@ -63,7 +64,6 @@
 	justify-content: space-between;
 	width: 2.5rem;
 	height: 2rem;
-	background-color: transparent;
 }
 .no-scroll {
 	overflow: hidden !important;
@@ -81,6 +81,7 @@
 	width: 100vw;
 	height: 100vh;
 	font-size: 2.25rem;
+	overflow: hidden;
 	line-height: 2.5rem;
 	color: #ffffff;
 	background-color: #000000;
